# LabFlow-Agent

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  evaluate_qc.py  evaluation_errors.csv  evaluation_summary.json  pyproject.toml  resume_metrics.json
benchmarks/: coding_tasks.json
docs/: agent-loop.md  architecture.md  benchmark.md  real-data-cross-validation.md  real-data-validation.md  release-history.md  release-notes-v0.4.0.md  workflow.md
labels/: batch_demo_001_labels.json  batch_demo_002_labels.json  batch_demo_003_labels.json  batch_demo_004_labels.json  batch_demo_005_labels.json
pico/: __init__.py  agent_loop.py  checkpoint.py  cli.py  config.py  context_manager.py  errors.py  labflow_tools.py  prompt_prefix.py  report_template.py  run_store.py  runtime.py  security.py  session_store.py  task_state.py  tool_context.py  tool_executor.py  tool_registry.py  tools.py  workflow_trace.py  workspace.py
reports/: batch_demo_001_qc_report.md  batch_demo_002_qc_report.md  batch_demo_003_qc_report.md  batch_demo_004_qc_report.md  batch_demo_005_qc_report.md  batch_public_mof_001_qc_report.md  batch_public_rruff_001_qc_report.md
scripts/: convert_rruff_to_labflow_csv.py  generate_demo_batches.py  normalize_csv.py  summarize_traces.py
summary/: 00-全局总览.md  01-代码仓库上下文设计 (1).md  02-运行时主循环与执行编排设计 (1).md  03-工具的接入与调用设计 (2).md  04-提示词形态与缓存复用设计 (1).md  05-结构化的会话记忆.md  06-上下文瘦身与输出管理设计 (1).md  07-会话状态、运行工件与恢复机制设计.md  08-评测框架与实验方法设计 (1).md  92-claude code相关.md  【更新中】91-面试题.md  【重要】90-针对项目描述的逐字面试话术.md  怎么学.md
tests/: test_agent_intent.py  test_agent_planner.py  test_batch_preprocess.py  test_context_manager.py  test_demo_batch_generation.py  test_evaluate_multi_batch.py  test_evaluate_qc.py  test_evaluation_errors.py  test_memory.py  (+35 more)
(+185 files in other folders)
